--- a/report/papers.bib
+++ b/report/papers.bib
@@ -35,3 +35,22 @@
   doi =		{http://dx.doi.org/10.4230/LIPIcs.SoCG.2016.28},
   annote =	{Keywords: time window, geometric data structures, range searching, dynamic convex hull}
 }
+
+@inproceedings{lueker1978data,
+  title={A data structure for orthogonal range queries},
+  author={Lueker, George S},
+  booktitle={Foundations of Computer Science, 1978., 19th Annual Symposium on},
+  pages={28--34},
+  year={1978},
+  organization={IEEE}
+}
+
+@inproceedings{shamos1976geometric,
+  title={Geometric intersection problems},
+  author={Shamos, Michael Ian and Hoey, Dan},
+  booktitle={Foundations of Computer Science, 1976., 17th Annual Symposium on},
+  pages={208--215},
+  year={1976},
+  organization={IEEE}
+}
+
